Calvin/firebase starter+add baby view (#17)
# Added AddBabyView, initial Firebase support

## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating this pull request, you agree to follow our [Code
of
Conduct](https://github.com/CS342/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/CS342/.github/blob/main/CONTRIBUTING.md):
- [x] I agree to follow the [Code of
Conduct](https://github.com/CS342/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/CS342/.github/blob/main/CONTRIBUTING.md).

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -31,7 +31,10 @@
         }
       }
     },
-    "Add Data" : {
+    "Add Another Baby" : {
+
+    },
+    "Add Your Baby" : {
 
     },
     "Allow Notifications" : {
@@ -43,6 +46,9 @@
           }
         }
       }
+    },
+    "Baby's Name" : {
+
     },
     "Close" : {
       "localizations" : {
@@ -83,6 +89,15 @@
           }
         }
       }
+    },
+    "Continue" : {
+
+    },
+    "Date of Birth" : {
+
+    },
+    "Error" : {
+
     },
     "Feedbridge" : {
       "localizations" : {
@@ -274,6 +289,9 @@
         }
       }
     },
+    "OK" : {
+
+    },
     "Onboarding" : {
       "localizations" : {
         "en" : {
@@ -283,6 +301,9 @@
           }
         }
       }
+    },
+    "Please enter your baby's information" : {
+
     },
     "Please fill out the Social Support Questionnaire every day." : {
       "localizations" : {
