Add UI for currently selected baby in picker

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -421,6 +421,9 @@
         }
       }
     },
+    "Selected" : {
+
+    },
     "Social Support Questionnaire" : {
       "localizations" : {
         "en" : {
