add wet diaper chart

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -722,7 +722,13 @@
         }
       }
     },
+    "Wet Diaper Drop" : {
+
+    },
     "Wet Diaper Entries" : {
+
+    },
+    "Wet Diapers" : {
 
     },
     "Yellow" : {
