Misc tweaks & fixups

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -7,6 +7,9 @@
     "⚠️ Medical Alert" : {
 
     },
+    "About Us" : {
+
+    },
     "ACCOUNT_SETUP_DESCRIPTION" : {
       "localizations" : {
         "en" : {
@@ -32,7 +35,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "The Feedbridge demonstrates the usage of the Firebase Account Module."
+            "value" : "Log in to Feedbridge"
           }
         }
       }
@@ -53,6 +56,9 @@
 
     },
     "Add Entries" : {
+
+    },
+    "Add Entry" : {
 
     },
     "Add Feed Entry" : {
@@ -110,6 +116,9 @@
     "Bottle" : {
 
     },
+    "Bottle volume (ml)" : {
+
+    },
     "Breastmilk" : {
 
     },
@@ -133,6 +142,9 @@
 
     },
     "Color: %@" : {
+
+    },
+    "Confirm" : {
 
     },
     "CONSENT_LOADING_ERROR" : {
@@ -180,6 +192,9 @@
     "Date of Birth" : {
 
     },
+    "Dehydration Check" : {
+
+    },
     "Dehydration Checks" : {
 
     },
@@ -201,10 +216,19 @@
     "Duration: %lld minutes" : {
 
     },
+    "Early Alerts" : {
+
+    },
+    "Enter Weight" : {
+
+    },
     "Error" : {
 
     },
     "Feed Entries" : {
+
+    },
+    "Feed time (minutes)" : {
 
     },
     "Feedbridge" : {
@@ -212,7 +236,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Spezi\nFeedbridge"
+            "value" : "Feedbridge"
           }
         }
       }
@@ -223,7 +247,13 @@
     "Feeding Method" : {
 
     },
+    "Feeding Type" : {
+
+    },
     "Formula" : {
+
+    },
+    "Get Started" : {
 
     },
     "Grant Access" : {
@@ -283,6 +313,9 @@
       }
     },
     "Heavy" : {
+
+    },
+    "Hi! It is now:" : {
 
     },
     "HL7 FHIR" : {
@@ -358,7 +391,11 @@
         }
       }
     },
+    "Kilograms" : {
+
+    },
     "Learn More" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -401,6 +438,9 @@
 
     },
     "Milk Type: %@" : {
+
+    },
+    "Monitor Your Baby" : {
 
     },
     "Name" : {
@@ -483,6 +523,9 @@
     "Pounds" : {
 
     },
+    "Red" : {
+
+    },
     "Red-Tinged" : {
 
     },
@@ -499,6 +542,9 @@
         }
       }
     },
+    "Select Date & Time" : {
+
+    },
     "Selected" : {
 
     },
@@ -513,6 +559,7 @@
       }
     },
     "Spezi Modules" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -542,10 +589,14 @@
         }
       }
     },
+    "Stool" : {
+
+    },
     "Stool Entries" : {
 
     },
     "Swift Package Manager" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -556,6 +607,7 @@
       }
     },
     "The Spezi Framework" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -584,6 +636,9 @@
         }
       }
     },
+    "Track Progress" : {
+
+    },
     "Type: %@" : {
 
     },
@@ -609,6 +664,9 @@
     "Volume: %lld mL" : {
 
     },
+    "Warning" : {
+
+    },
     "Weight Entries" : {
 
     },
@@ -620,7 +678,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "The Spezi Framework builds the foundation of this application."
+            "value" : "Track your baby's feeds, diapers, and weight to ensure healthy development"
           }
         }
       }
@@ -630,7 +688,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Spezi uses the Swift Package Manager to import it as a dependency."
+            "value" : "Monitor your baby's growth and feeding patterns with easy-to-use tracking tools"
           }
         }
       }
@@ -640,7 +698,17 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Spezi offers several modules including HealthKit integration, questionnaires, and more ..."
+            "value" : "Receive timely alerts if your baby shows signs of feeding concerns"
+          }
+        }
+      }
+    },
+    "WELCOME_AREA4_DESCRIPTION" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dr. Meera Sankar, Clinical Professor of Pediatrics.\nPinlin [Calvin] Xu, Shamit Surana, Shreya D'Souza\n2025 Stanford University"
           }
         }
       }
@@ -650,12 +718,18 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "This application demonstrates several Spezi features & modules."
+            "value" : "Supporting healthy feeding for your newborn"
           }
         }
       }
     },
+    "Wet Diaper" : {
+
+    },
     "Wet Diaper Entries" : {
+
+    },
+    "What entry would you like to enter?" : {
 
     },
     "Yellow" : {
