--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -1,6 +1,22 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "%.2f kg" : {
+
+    },
+    "%.2f lbs" : {
+
+    },
+    "%@ and %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ and %2$@"
+          }
+        }
+      }
+    },
     "⚠️ Dehydration Alert" : {
 
     },
@@ -95,9 +111,6 @@
     "Amount: %lldml" : {
 
     },
-    "Are you sure you want to delete this baby? This action cannot be undone." : {
-
-    },
     "Baby Debug View" : {
 
     },
@@ -119,7 +132,16 @@
     "Bottle" : {
 
     },
+    "Bottle Feed: %lld ml" : {
+
+    },
     "Bottle volume (ml)" : {
+
+    },
+    "Bottle: %lld ml" : {
+
+    },
+    "Breastfeeding: %lld min" : {
 
     },
     "Breastmilk" : {
@@ -189,6 +211,12 @@
     "Dark Green" : {
 
     },
+    "Dashboard" : {
+
+    },
+    "Date" : {
+
+    },
     "Date & Time" : {
 
     },
@@ -204,12 +232,6 @@
     "Dehydration Symptoms" : {
 
     },
-    "Delete" : {
-
-    },
-    "Delete Baby" : {
-
-    },
     "Direct Breastfeeding" : {
 
     },
@@ -217,6 +239,9 @@
 
     },
     "Dry Mucous Membranes: %@" : {
+
+    },
+    "Duration (min)" : {
 
     },
     "Duration: %lld min" : {
@@ -257,6 +282,12 @@
 
     },
     "Feeding Type" : {
+
+    },
+    "Feeds" : {
+
+    },
+    "Flame" : {
 
     },
     "Formula" : {
@@ -468,19 +499,10 @@
     "No baby selected" : {
 
     },
-    "No dehydration checks" : {
-
-    },
-    "No feed entries" : {
-
-    },
-    "No stool entries" : {
+    "No data added" : {
 
     },
     "No weight entries" : {
-
-    },
-    "No wet diaper entries" : {
 
     },
     "NOTIFICATION_PERMISSIONS_DESCRIPTION" : {
@@ -553,6 +575,9 @@
     "Save" : {
 
     },
+    "Scale" : {
+
+    },
     "Schedule" : {
       "localizations" : {
         "en" : {
@@ -613,7 +638,13 @@
     "Stool" : {
 
     },
+    "Stool Drop" : {
+
+    },
     "Stool Entries" : {
+
+    },
+    "Stools" : {
 
     },
     "Swift Package Manager" : {
@@ -657,6 +688,9 @@
         }
       }
     },
+    "Time" : {
+
+    },
     "Track Progress" : {
 
     },
@@ -679,6 +713,9 @@
     "Volume" : {
 
     },
+    "Volume (ml)" : {
+
+    },
     "Volume: %@" : {
 
     },
@@ -688,10 +725,16 @@
     "Warning" : {
 
     },
+    "Weight (kg)" : {
+
+    },
     "Weight Entries" : {
 
     },
     "Weight in Kilograms" : {
+
+    },
+    "Weights" : {
 
     },
     "WELCOME_AREA1_DESCRIPTION" : {
@@ -747,7 +790,13 @@
     "Wet Diaper" : {
 
     },
+    "Wet Diaper Drop" : {
+
+    },
     "Wet Diaper Entries" : {
+
+    },
+    "Wet Diapers" : {
 
     },
     "What entry would you like to enter?" : {
