made view conform with rest of pages and fixed bug with add weight and added success message

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -647,6 +647,9 @@
     "Stools" : {
 
     },
+    "Success saving" : {
+
+    },
     "Swift Package Manager" : {
       "extractionState" : "stale",
       "localizations" : {
