update colors on mini charts

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -499,6 +499,9 @@
         }
       }
     },
+    "Next page" : {
+
+    },
     "No baby selected" : {
 
     },
@@ -716,6 +719,9 @@
         }
       }
     },
+    "Voids" : {
+
+    },
     "Volume" : {
 
     },
@@ -797,9 +803,6 @@
 
     },
     "Wet Diaper Entries" : {
-
-    },
-    "Wet Diapers" : {
 
     },
     "What entry would you like to enter?" : {
