made view conform with rest of pages and fixed bug with add weight an… (#30)
# *Refreshed addentryview UI*

## :gear: Release Notes 
- made view conform with rest of pages
- fixed bug with add weight
- added success message


## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating this pull request, you agree to follow our [Code
of
Conduct](https://github.com/CS342/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/CS342/.github/blob/main/CONTRIBUTING.md):
- [x] I agree to follow the [Code of
Conduct](https://github.com/CS342/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/CS342/.github/blob/main/CONTRIBUTING.md).

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -662,6 +662,9 @@
     "Stools" : {
 
     },
+    "Success saving" : {
+
+    },
     "Swift Package Manager" : {
       "extractionState" : "stale",
       "localizations" : {
