--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -223,10 +223,13 @@
     "Date of Birth" : {
 
     },
-    "Dehydration Check" : {
+    "Dehydration Checks" : {
 
     },
-    "Dehydration Checks" : {
+    "Dehydration Details" : {
+
+    },
+    "Dehydration Heart" : {
 
     },
     "Dehydration Symptoms" : {
@@ -253,10 +256,10 @@
     "Early Alerts" : {
 
     },
-    "Enter Weight" : {
+    "Error" : {
 
     },
-    "Error" : {
+    "Feed Details" : {
 
     },
     "Feed Entries" : {
@@ -635,7 +638,7 @@
         }
       }
     },
-    "Stool" : {
+    "Stool Details" : {
 
     },
     "Stool Drop" : {
@@ -713,6 +716,9 @@
         }
       }
     },
+    "Void Details" : {
+
+    },
     "Volume" : {
 
     },
@@ -729,6 +735,9 @@
 
     },
     "Weight (kg)" : {
+
+    },
+    "Weight Details" : {
 
     },
     "Weight Entries" : {
@@ -789,9 +798,6 @@
           }
         }
       }
-    },
-    "Wet Diaper" : {
-
     },
     "Wet Diaper Drop" : {
 
