Update formatting of form (#32)
This adds UI updates so that the form colors match up with the UI on the
dashboard page.

![Simulator Screenshot - iPhone 16 Pro - 2025-03-07 at 14 55
21](https://github.com/user-attachments/assets/2b29a4c3-ba60-4b53-bf9e-dbe6477deef4)

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -226,10 +226,13 @@
     "Date of Birth" : {
 
     },
-    "Dehydration Check" : {
+    "Dehydration Checks" : {
 
     },
-    "Dehydration Checks" : {
+    "Dehydration Details" : {
+
+    },
+    "Dehydration Heart" : {
 
     },
     "Dehydration Symptoms" : {
@@ -256,10 +259,10 @@
     "Early Alerts" : {
 
     },
-    "Enter Weight" : {
+    "Error" : {
 
     },
-    "Error" : {
+    "Feed Details" : {
 
     },
     "Feed #" : {
@@ -647,7 +650,7 @@
         }
       }
     },
-    "Stool" : {
+    "Stool Details" : {
 
     },
     "Stool #" : {
@@ -725,8 +728,11 @@
         }
       }
     },
-    "Voids" : {
+    "Void Details" : {
 
+    },
+    "Voids" : {
+    
     },
     "Volume" : {
 
@@ -741,6 +747,9 @@
 
     },
     "Weight (lb)" : {
+
+    },
+    "Weight Details" : {
 
     },
     "Weight Entries" : {
@@ -801,9 +810,6 @@
           }
         }
       }
-    },
-    "Wet Diaper" : {
-
     },
     "Wet Diaper Drop" : {
 
